fixed css on mobile

--- a/src/stylesheets/Login.css
+++ b/src/stylesheets/Login.css
@@ -14,7 +14,7 @@
 
 .login-form {
   font-family: "Roboto", sans-serif;
-  width: 400px;
+  width: 350px;
   height: 350px;
   margin: 30px auto;
   background: linear-gradient(to right, #ffffff 0%, #fafafa 50%, #ffffff 99%);
